--- a/.env
+++ b/.env
@@ -19,3 +19,10 @@ PRISMA_MIGRATION_ENGINE_BINARY="./prisma/engines/migration-engine.exe"
 
 # 포매팅 도구
 PRISMA_FMT_BINARY="./prisma/engines/prisma-fmt.exe"
+
+# PDF 파일 서버 (itmuploadapi 8082 포트 반영)
+PDF_SERVER_BASE_URL=http://10.135.77.71:8082
+
+# Poppler 라이브러리 bin 폴더 경로 (ITM-DATA-API 서버 내 실제 설치 경로)
+# 예: "C:\\Program Files\\poppler\\Library\\bin"
+POPPLER_BIN_PATH="C:\\ITM-DATA-API\\poppler\\bin"
