--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-# ITM-DATA-API\.env
+# ITM-DATA-API/.env
 # 1. DB 연결 (기존 유지)
 DATABASE_URL="postgresql://postgres:pw@10.1.1.1:5432/itm?schema=public&connection_limit=70" 
 
