--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 # ITM-DATA-API/.env
 # 1. DB 연결 (기존 유지)
-DATABASE_URL="postgresql://postgres:pw@10.1.1.1:5432/itm?schema=public&connection_limit=70" 
+DATABASE_URL="postgresql://postgres:pw@[DB서버IP]:5432/itm?schema=public&connection_limit=70" 
 
 # 2. 엔진 파일 자동 다운로드 및 체크섬 검증 방지 (필수)
 PRISMA_ENGINES_CHECKSUM_IGNORE_MISSING="1"
@@ -21,8 +21,8 @@ PRISMA_MIGRATION_ENGINE_BINARY="./prisma/engines/migration-engine.exe"
 PRISMA_FMT_BINARY="./prisma/engines/prisma-fmt.exe"
 
 # PDF 파일 서버 (itmuploadapi 8082 포트 반영)
-PDF_SERVER_BASE_URL=http://10.135.77.71:8082
+PDF_SERVER_BASE_URL=http://[DB서버IP]:8082
 
 # Poppler 라이브러리 bin 폴더 경로 (ITM-DATA-API 서버 내 실제 설치 경로)
 # 예: "C:\\Program Files\\poppler\\Library\\bin"
-POPPLER_BIN_PATH="C:\\ITM-DATA-API\\poppler\\bin"
+POPPLER_BIN_PATH="D:\\Services\\ITM-Data-API\\poppler\\Library\\bin"
