Fix comments and formatting in .env file -- 0223_16

--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
-# ITM-DATA-API/.env
+# ITM-Data-API/.env
 # 1. DB 연결 (기존 유지)
-DATABASE_URL="postgresql://postgres:pw@[DB서버IP]:5432/itm?schema=public&connection_limit=70" 
+DATABASE_URL="postgresql://postgres:pw@[DB서버IP]:5432/itm?schema=public&connection_limit=70"
 
 # 2. 엔진 파일 자동 다운로드 및 체크섬 검증 방지 (필수)
 PRISMA_ENGINES_CHECKSUM_IGNORE_MISSING="1"
@@ -11,7 +11,7 @@ PRISMA_ENGINES_CHECKSUM_IGNORE_MISSING="1"
 # 쿼리 엔진 (실행 시 필요)
 PRISMA_QUERY_ENGINE_LIBRARY="./prisma/engines/query_engine.dll.node"
 
-# 스키마 엔진 (Generate/Migrate 시 필요 - 지금 에러 나는 부분!)
+# 스키마 엔진 (Generate/Migrate 시 필요)
 PRISMA_SCHEMA_ENGINE_BINARY="./prisma/engines/schema-engine.exe"
 
 # 마이그레이션 엔진 (구버전 호환용)
@@ -21,8 +21,8 @@ PRISMA_MIGRATION_ENGINE_BINARY="./prisma/engines/migration-engine.exe"
 PRISMA_FMT_BINARY="./prisma/engines/prisma-fmt.exe"
 
 # PDF 파일 서버 (itmuploadapi 8082 포트 반영)
-PDF_SERVER_BASE_URL=http://[DB서버IP]:8082
+PDF_SERVER_BASE_URL="http://[DB서버IP]:8082"
 
 # Poppler 라이브러리 bin 폴더 경로 (ITM-DATA-API 서버 내 실제 설치 경로)
-# 예: "C:\\Program Files\\poppler\\Library\\bin"
+# 예: "D:\\Services\\ITM-Data-API\\poppler\\Library\\bin""
 POPPLER_BIN_PATH="D:\\Services\\ITM-Data-API\\poppler\\Library\\bin"
