Update Poppler bin path example in .env -- 0223_16-1
Uncomment example path for Poppler library bin folder.

--- a/.env
+++ b/.env
@@ -24,5 +24,5 @@ PRISMA_FMT_BINARY="./prisma/engines/prisma-fmt.exe"
 PDF_SERVER_BASE_URL="http://[DB서버IP]:8082"
 
 # Poppler 라이브러리 bin 폴더 경로 (ITM-DATA-API 서버 내 실제 설치 경로)
-# 예: "D:\\Services\\ITM-Data-API\\poppler\\Library\\bin""
+# 예: "D:\\Services\\ITM-Data-API\\poppler\\Library\\bin"
 POPPLER_BIN_PATH="D:\\Services\\ITM-Data-API\\poppler\\Library\\bin"
